@@ -9,6 +9,7 @@ Python 3 (3.6+) is required now. Mpc was dropped as a requirement. Make sure pyt
 - Queue's "Follow Mode" tries to be automagic(tm) and the mode-button was removed from the UI 
 - "L" shortcut always shows the currently playing song in the Queue (and activates Follow Mode again)
 - Provides more keyboard-shortcut hints in the UI
+- Changes search to filter for the actual hits instead of the albumartist-list only
 
 # 5.6.0
 
